--- a/KSScreensaverTemplate/KSScreensaverTemplate.csproj
+++ b/KSScreensaverTemplate/KSScreensaverTemplate.csproj
@@ -41,12 +41,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ScreensaverName.cs" />
+    <Compile Include="ScreensaverNameDisp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="KS">
-      <Version>0.0.22.1</Version>
+      <Version>0.0.23-dev2414</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
