--- a/KSScreensaverTemplate/KSScreensaverTemplate.csproj
+++ b/KSScreensaverTemplate/KSScreensaverTemplate.csproj
@@ -46,7 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="KS">
-      <Version>0.0.23-dev2414</Version>
+      <Version>0.0.24.4</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
